--- a/Finsys/templates/app1/salesorder.html
+++ b/Finsys/templates/app1/salesorder.html
@@ -35,12 +35,12 @@
                         <label class="col-form-label">Customer</label>
                         <div class="d-flex">
                             <select name="customer" id="customer" class="form-control" style="width: 95%;">
-                                <option value="NIL" selected>Select Customer
+                                <option value="NIL" selected hidden>Select Customer
                                 </option>
                                 
                                 {% for cust in customers %}
                                     {% if cust.cid_id == cmp1.cid %}
-                                        <option value="{{ cust.customerid }} {{ cust.firstname }} {{ cust.lastname }}">{{ cust.title }} {{ cust.firstname }} {{ cust.lastname }}</option>
+                                        <option value="{{ cust.firstname }} {{ cust.lastname }}">{{ cust.title }} {{ cust.firstname }} {{ cust.lastname }}</option>
                                     {% endif %}
                                 {% endfor %}
                             </select>
@@ -66,11 +66,11 @@
                    
                     <div class="col-md-3">
                         <label class="col-form-label">Sales Order Date</label>
-                        <input type="date" class="form-control" value="{{ tod }}" name="Salesdate"><br>
+                        <input type="date" class="form-control" name="Salesdate"><br>
                     </div>
                     <div class="col-md-3">
                         <label class="col-form-label"> Expected Shipment Date </label>
-                        <input type="date" class="form-control" value="{{ tod }}" name="Shipmentdate" required><br>
+                        <input type="date" class="form-control" name="Shipmentdate" readonly><br>
                     </div>
                     <div class="col-md-3">
                         <label class="col-form-label">Reference Number</label>
