--- a/Finsys/templates/app1/gosalesorder.html
+++ b/Finsys/templates/app1/gosalesorder.html
@@ -61,6 +61,10 @@
         left: 50%; */
         /* transform: translate(-50%, -50%); */
         }
+
+        .clickable-row a:hover{
+            font-size: small;
+        }
       </style>
         <div class="page-content">
             <div class="card radius-15">
@@ -83,7 +87,7 @@
                         </div>
                         <div class="col-md-2" style="width: 40%; margin-top: 9px;">
                             <div class="dropdown">
-                                <button type="button" class="btn btn-outline-info   text-grey fas fa-sort"
+                                <button type="button" class="btn btn-outline-info   text-grey fas fa-sort dropdown-toggle"
                                         data-toggle="dropdown"> Sort by
                                 </button>
                                 <div class="dropdown-menu " style="background-color: black;">
@@ -92,12 +96,12 @@
                                 <!-- <a class="dropdown-item  " href="{% url 'sales_num_desc' %}"
                                     style="height: 40px; font-size: 15px; color: white; text-align: center;" >Sales Order Number <icon class=" fas fa-arrow-up"></icon></a> -->
 
-                                <a class="dropdown-item " href="{% url 'sales_date_asc' %}"
+                                <a class="dropdown-item " onclick="sortTableDate()"
                                     style="height: 40px; font-size: 15px; color: white; text-align: center; " >Date  </a>
                                 <!-- <a class="dropdown-item " href="{% url 'sales_date_desc' %}"
                                     style="height: 40px; font-size: 15px; color: white; text-align: center;" >Date <icon class=" fas fa-arrow-up"></icon></a> -->
 
-                                <a class="dropdown-item  " href="{% url 'sales_cust_asc' %}"
+                                <a class="dropdown-item  " onclick="sortTableName()"
                                     style="height: 40px; font-size: 15px; color: white; text-align: center;" >
                                         Customer  </a>
                                 <!-- <a class="dropdown-item  " href="{% url 'sales_cust_desc' %}"
@@ -122,43 +126,66 @@
                                         style="height: 40px; font-size: 15px; color: white; text-align: center;" >Draft</a>
                                     <a class="dropdown-item" href="{% url 'sale_filter2' %}"
                                         style="height: 40px; font-size: 15px; color: white; text-align: center;">Approved</a>
-                                    <a class="dropdown-item" href="{% url 'sale_filter3' %}"
-                                        style="height: 40px; font-size: 15px; color: white; text-align: center;">Invoice</a>
-                                    
                                 </div> 
                             </div>
                         </div>
                         <div class="col-md-2" >
                             <a href="{% url 'newsalesorder' %}" >
-                                <button id="myBtn" class="btn btn-outline-info text-grey fas fa-plus" style="margin-top: 8px;">&nbsp; Add Sales Order</button>
+                                <button id="myBtn" class="btn btn-outline-info text-grey " style="margin-top: 8px;"> <i class="fa fa-plus"></i>&nbsp; Add Sales Order</button>
                             </a>
                         </div>
-
                     </div>
+
                     <div class="container-fluid">
                         <table class="table table-responsive-md mt-4 table-hover" id="table">
                             <thead>
                                 <tr>
                                     <th style="text-align: center;text-transform: uppercase;">Date</th>
                                     <th style="text-align: center;text-transform: uppercase;">Sales Order No</th>
-                                    <th style="text-align: center;text-transform: uppercase;">Reference Number</th>
                                     <th style="text-align: center;text-transform: uppercase;">Customer Name</th>
+                                    <th style="text-align: center;text-transform: uppercase;">Customer Email</th>
+                                    <th style="text-align: center;text-transform: uppercase;">Amount</th> 
                                     <th style="text-align: center;text-transform: uppercase;">Status</th>
-                                    <th style="text-align: center;text-transform: uppercase;">Amount</th>
+                                    <th style="text-align: center;text-transform: uppercase;">Balance</th>
+                                    <th style="text-align: center;text-transform: uppercase;">Action</th>
                                     <!-- <th style="text-align: center;">ACTION</th> -->
                                 </tr>
                             </thead>
                             <tbody>
                                 {% for sale in sel1 %}
                                     {% if sale.cid_id == cmp1.cid %}
-                                        <tr  class="table-row " data-href="" >
-                                            <td style="text-align: center;"><a class="idsr" style="list-style: none;"  href="{% url 'sales_order_view' sale.id %}"> {{ sale.saledate | date:'d-m-Y' }}</a></td>
-                                            <td style="text-align: center;"><a class="idsr" style="list-style: none;"  href="{% url 'sales_order_view' sale.id %}"> {{ sale.saleno }}</a></td>
-                                            <td style="text-align: center;"><a class="idsr" style="list-style: none;"  href="{% url 'sales_order_view' sale.id %} ">  {{ sale.reference_number }}</a></td>
-                                            <td style="text-align: center;"><a class="idsr" style="list-style: none;"  href="{% url 'sales_order_view' sale.id %}"> {{ sale.cust }}</a></td>
-                                            <td style="text-align: center;"><a class="idsr" style="list-style: none;"  href="{% url 'sales_order_view' sale.id %} "> {{ sale.status }}</a></td>
-                                            <td style="text-align: center;"><a class="idsr" style="list-style: none;"  href="{% url 'sales_order_view' sale.id %}"> {{ sale.salestotal }}</a></td>
-                                            
+                                        <tr  class="table-row clickable-row text-center" data-href="sales_order_view/{{ sale.id }}" >
+                                            <td style="text-align: center;">{{ sale.saledate | date:'d-m-Y' }}</td>
+                                            <td style="text-align: center;">{{ sale.saleno }}</td>
+                                            <td style="text-align: center;">{{ sale.cust }}</td>
+                                            <td style="text-align: center;">{{ sale.saleemail }}</td>
+                                            <td style="text-align: center;">{{ sale.salestotal }}</td>
+                                            <td style="text-align: center;">{{ sale.status }}</td>
+                                            <td style="text-align: center;">{{ sale.balance }}</td>
+                                            {% if sale.inv_status == 0 %}
+                                                {% if sale.salcrd_status == 0 %}
+                                                <td style="text-align: center;">
+                                                    <a class="text-danger" href="{% url 'convert_to_inv' sale.id %}"  >Convert to Invoice</a><br>
+                                                    <a class="text-danger" href="{% url 'convert_to_reccinv' sale.id %}">Convert to Recurring Invoice</a>
+                                                </td>
+                                                {% else %}
+                                                <td style="text-align: center;">
+                                                    <a class="text-danger" href="{% url 'convert_to_inv' sale.id %}" >Convert to Invoice</a><br>
+                                                    <span class="text-success">Completed</span>
+                                                </td>
+                                                {% endif %}
+                                            {% else %}
+                                                {% if sale.salcrd_status == 0 %}
+                                                <td style="text-align: center;">
+                                                    <span class="text-success">Completed</span><br>
+                                                    <a class="text-danger" href="{% url 'convert_to_reccinv' sale.id %}">Convert to Recurring Invoice</a>
+                                                </td>
+                                                {% else %}
+                                                <td style="text-align: center;">
+                                                    <span class="text-success">Completed</span>
+                                                </td>
+                                                {% endif %}
+                                            {% endif %}
                                         </tr>
                                     {% endif %}
                                 {% endfor %}
@@ -170,29 +197,91 @@
         </div>
         <script type="text/javascript" src="https://unpkg.com/xlsx@0.15.1/dist/xlsx.full.min.js"></script>
 
-        <script>
+    <script>
 
-            $(document).ready(function() {
-                var $rows = $('.table tbody tr');
-                $('#search').keyup(function() {
-                    var val = $.trim($(this).val()).replace(/ +/g, ' ').toLowerCase();
-                    $rows.show().filter(function() {
-                        console.log($rows.show())
+        $(document).ready(function() {
+            var $rows = $('.table tbody tr');
+            $('#search').keyup(function() {
+                var val = $.trim($(this).val()).replace(/ +/g, ' ').toLowerCase();
+                $rows.show().filter(function() {
+                    console.log($rows.show())
 
-                        var text = $(this).text().replace(/\s+/g, ' ').toLowerCase();
-                        console.log(text)
-                        return !~text.indexOf(val);
-                    }).hide();
-                });
+                    var text = $(this).text().replace(/\s+/g, ' ').toLowerCase();
+                    console.log(text)
+                    return !~text.indexOf(val);
+                }).hide();
             });
-    
-            function ExportToExcel() {
-                const table = document.querySelector('#table');
-                const ws = XLSX.utils.table_to_sheet(table);
-                const wb = XLSX.utils.book_new();
-                XLSX.utils.book_append_sheet(wb, ws, 'Sheet1');
-                XLSX.writeFile(wb, 'SalesOrder.xlsx');
+        });
+
+        function ExportToExcel() {
+            const table = document.querySelector('#table');
+            const ws = XLSX.utils.table_to_sheet(table);
+            const wb = XLSX.utils.book_new();
+            XLSX.utils.book_append_sheet(wb, ws, 'Sheet1');
+            XLSX.writeFile(wb, 'SalesOrder.xlsx');
+        }
+    </script>
+
+        
+    <script>
+        jQuery(document).ready(function($) {
+            $(".clickable-row").click(function() {
+            window.location = $(this).data("href");
+            });
+        });
+    </script>
+
+    <script>
+        function sortTableName() {
+            var table, rows, switching, i, x, y, shouldSwitch;
+            table = document.getElementById("table");
+            switching = true;
+            while (switching) {
+                switching = false;
+                rows = table.rows;
+                for (i = 1; i < rows.length - 1; i++) {
+                    shouldSwitch = false;
+                    x = rows[i].getElementsByTagName("td")[2];
+                    y = rows[i + 1].getElementsByTagName("td")[2];
+                    if (x.innerHTML.toLowerCase() > y.innerHTML.toLowerCase()) {
+                        shouldSwitch = true;
+                        break;
                     }
-        </script>
+                }
+                if (shouldSwitch) {
+                    rows[i].parentNode.insertBefore(rows[i + 1], rows[i]);
+                    switching = true;
+                }
+            }
+        }
+
+        function sortTableDate() {
+            var table, rows, switching, i, x, y, shouldSwitch;
+            table = document.getElementById("table");
+            switching = true;
+            while (switching) {
+                switching = false;
+                rows = table.rows;
+                for (i = 1; i < rows.length - 1; i++) {
+                    shouldSwitch = false;
+                    x =new Date(parseDate(rows[i].cells[0].innerHTML));
+                    y = new Date(parseDate(rows[i + 1].cells[0].innerHTML));
+                    if (x > y) {
+                        shouldSwitch = true;
+                        break;
+                    }
+                }
+                if (shouldSwitch) {
+                    rows[i].parentNode.insertBefore(rows[i + 1], rows[i]);
+                    switching = true;
+                }
+            }
+        }
+
+        function parseDate(input) {
+            var parts = input.split('-');
+            return parts[1] + '/' + parts[0] + '/' + parts[2];
+        }
+    </script>
     {% endif %}
 {% endblock %}
